# django-fashion

./: Makefile  README.md  db.sqlite  pyproject.toml
docker-compose/: app.yaml  redis.yaml  s3_storages.yaml  storages.yaml
src/api/v1/: routers.py  schemas.py
src/api/v1/cart/: schemas.py  views.py
src/api/v1/customer/: schemas.py  views.py
src/api/v1/product/: schemas.py  views.py
src/api/v1/products/: schemas.py  views.py
src/api/v1/user_auth/: schemas.py  views.py
src/apps/base/domain/: commands.py  entities.py  error.py  value_objects.py
src/apps/base/helper/: errors.py
src/apps/base/infrastructure/: models.py
src/apps/base/migrations/: 0001_initial.py  0002_delete_baseoidorm_delete_basetimeorm.py
src/apps/cart/: admin.py
src/apps/cart/domain/: commands.py  entities.py  errors.py  services.py  use_cases.py  value_objects.py
src/apps/cart/infrastructure/: models.py  repositories.py  session.py
src/apps/cart/migrations/: 0001_initial.py  0002_alter_cartdto_name.py  0002_alter_cartitemorm_options.py  0003_alter_cartdto_products.py  0004_alter_cartdto_products.py  (+3 more)
src/apps/customer/: admin.py  apps.py
src/apps/product/: admin.py
src/apps/user_auth/: admin.py  apps.py
src/core/: containers.py  settings.py  urls.py
test/: conftest.py
test/mock/factories/: products.py
test/mock/factory/: customer.py  product.py  user_auth.py
test/mock/service/: product.py  user_auth.py
test/mock/services/: products.py
test/use_case/: test_customer_use_cases.py  test_product_use_cases.py  test_products_use_cases.py  test_user_auth_use_cases.py
(+37 files in other folders)
